2013-02-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/reporting_builder.item_editor.php: fixed the
	ovewrite the var $sql from netflow filter.
	
	Fixes: #3602194

2013-02-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_xml.php, include/functions_reporting.php,
	operation/reporting/reporting_xml.php: fixed the SLA agent name
	with entities differents to hexadecimal entities. And fixed the
	serialized data when has not separators.
	
	Fixes: #3602204

2013-02-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/reporting_builder.item_editor.php: fixed lost
	global var $meta in the SLA table.
	
	Fixes: #3602721

2013-02-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/search_modules.php: fixed the image to edit.
	
	* include/functions_html.php: fixed check string values in function
	"html_print_input_hidden".
	
	Fixes: #3603084

2013-02-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/search_modules.php: added edit button when the user can
	edit.

2013-02-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* install.php: cleaned source code style.
	
	* godmode/netflow/nf_edit.php, include/functions_netflow.php: fixed
	the empty data.
	
	Fixes: #3603092

2013-02-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/javascript/pandora_alerts.js: cleaned source code style.
	
	* include/functions_graph.php: added lost function
	"graph_events_validated".
	
	Fixes: #3603110

2013-02-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/alerts/configure_alert_action.php: fixed sustitution the
	values in the macros when load a action.
	
	Fixes: #3603125

2013-02-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/alerts/alert_list.list.php,
	godmode/reporting/graph_builder.php, godmode/setup/news.php,
	godmode/setup/setup_general.php, godmode/netflow/nf_edit_form.php,
	godmode/db/db_purge.php, godmode/db/db_main.php,
	godmode/extensions.php, include/functions_reporting.php,